--- a/notes/2025-07-08-schwarz2025-genAI.qmd
+++ b/notes/2025-07-08-schwarz2025-genAI.qmd
@@ -49,5 +49,5 @@ image: "https://miro.medium.com/v2/resize:fit:1015/1*dQK4Z9ky7tTFQ66hkua0Og.png"
 
 | Topic                                 | Source                                                                                          |
 |---------------------------------------|-------------------------------------------------------------------------------------------------|
-| Division of labor between humans and machines | Frey, C. B., & Osborne, M. (2024). *Generative AI and the future of work: a reappraisal*. *Brown Journal of World Affairs*, 30(1), 1–17. |
+| Division of labor between humans and machines | **Frey, C. B., & Osborne, M. (2024)**. Generative AI and the future of work: a reappraisal. *Brown Journal of World Affairs*, 30(1), 1–17. |
 
