--- a/notes/2025-07-09-pallant2025-genAI-impact.qmd
+++ b/notes/2025-07-09-pallant2025-genAI-impact.qmd
@@ -4,6 +4,7 @@ author: Emily Somerset
 date: today
 categories: [generative AI, learning outcomes, qualitative analysis]
 tags: [none]
+image: "https://cdn.mos.cms.futurecdn.net/GSkcxRqtHam58T5URwTN7c.jpg"
 ---
 
 ## Source
@@ -14,7 +15,13 @@ tags: [none]
 
 - **Study population:** 
 
-- **Research question(s):** 
+- **Relevant Background:**
+  - **Achievement Goals Framework**  is a well-established theory in education research, often used to study academic behaviours such as cheating and to explain how positive learning outcomes are achieved. The framework posits that students adopt either **performance goals** and/or **mastery goals** in their approach to learning. Performance goal orientations emphasize demonstrating competence relative to others, focusing on grades, comparison, and external validation. While this mindset can offer short-term motivation, it often undermines deep learning and discourages students from taking intellectual risks. In contrast, mastery goal orientations prioritize the development of competence and a genuine pursuit of understanding. Students with this mindset tend to embrace challenges as opportunities for growth, leading to more sustained and meaningful learning. This paper proposes that similar patterns may emerge in how students integrate generative AI into their learning, depending on their underlying goal orientation.
+
+- **Research question(s):** The research question explored in this paper is: By what means does goal structure relate to how students use generative AI (GenAI) to craft knowledge outputs and achieve learning outcomes? This is addressed through two primary objectives:
+    1) To explore whether students’ use of GenAI is affected by their goal orientations, and
+    2) To examine how students’ use of GenAI affects their learning outcomes.
+    
 
 - **Methods:** 
 
@@ -24,6 +31,8 @@ tags: [none]
 
    
 ## Key Quotes
+
+> "The unique and complex landscape of GenAI. along with its potential impact on the student experience and implications for learning outcomes, remains largely unknown."
 
 
 
@@ -35,5 +44,8 @@ tags: [none]
 
 | Topic                                 | Source                                                                                          |
 |---------------------------------------|-------------------------------------------------------------------------------------------------|
-
+|AI for student engagement | **Nguyen, A., Kremantzis, M., Essien, A., Petrounias, I., & Hosseini, S. (2024)**. Enhancing student engagement through artificial intelligence (AI): Understanding the basics, opportunities, and challenges. *Journal of University Teaching and Learning Practice*, 21(6), 1-13.|
+|AI on critical thinking |**Essien, A., Bukoye, O. T., O’Dea, X., & Kremantzis, M. (2024)**. The influence of AI text generators on critical thinking skills in UK business schools. *Studies in Higher Education*, 49(5), 865-882. |
+|Student attitutes towards AI |**Chan, C. K. Y., & Zhou, W. (2023)**. Deconstructing student perceptions of generative AI (GenAI) through an expectancy value theory (EVT)-based instrument. arXiv preprint arXiv:2305.01186. |
+|Achievement Goals Framework| **Elliot, A. J. (2005)**. A Conceptual History of the Achievement Goal Construct. *Handbook of Competence and Motivation*, 52-72.<br> **Nicholls, J. G. (1984)**. Achievement motivation: conceptions of ability, subjective experience, task choice, and performance. *Psychological review*, 91(3), 328.|
 
