updated second paper

--- a/notes/2025-07-09-pallant2025-genAI-impact.qmd
+++ b/notes/2025-07-09-pallant2025-genAI-impact.qmd
@@ -26,12 +26,16 @@ image: "https://cdn.mos.cms.futurecdn.net/GSkcxRqtHam58T5URwTN7c.jpg"
     4) Investigate the degree to which students demonstrate critical and reflective thinking when engaging with GenAI.
     
 - **Methods:** 
-  - Quasi-experimental lens as ethical considerations prevent exposing one group to GenAI while withholding it from another.
-  - Pretest survey 
+  - **Pretest survey (study 1):** Students were asked, *"Do you think generative AI such as ChatGPT could potentially be used to cheat in a university assessment?"* These free-text responses were collected to better understand students’ awareness of and attitudes toward GenAI in a tertiary education context.
+  - **Generative AI task (study 2)**
+      - A quasi-experimental approach was adopted, as ethical considerations prevented exposing one group to GenAI while withholding it from another.
+      - In Week 1, students used GenAI to generate a definition of a concept relevant to their course. After completing the 12-week unit, they wrote their own definition, compared it with the AI-generated one, and reflected on their learning.
+      - Approximately 75,000 words of student responses were analyzed using quantitative content analysis (QCA), which combined a qualitative coding framework with quantitative analyses applied after coding.
+  - Final unit marks (%) and assignment marks (%) were used as indicators of student learning for both the GenAI task and overall unit performance.
 
 
 - **Results:**
-  - hello
+  - In study 1, the authors classified the students into "performance" or "mastery" goal structures based on their answers to the pretest survey. 
   
 - **Conclusions:**
   - hello
@@ -45,7 +49,8 @@ image: "https://cdn.mos.cms.futurecdn.net/GSkcxRqtHam58T5URwTN7c.jpg"
 
 
 ## Reflection {.callout-reflection}
-
+ - It is unclear what makes this study a quasi-experiment, as it is not evident what the treatment or control groups would have been in a true experimental design.
+ - Using grades as a measure of learning in a research setting has limitations. It would strengthen the study if the authors incorporated established assessment instruments or published questions and rubrics that are specifically designed to evaluate learning outcomes.
 
 ## Relevant Background
   - **Achievement Goals Framework**  is a well-established theory in education research, often used to study academic behaviours such as cheating and to explain how positive learning outcomes are achieved. The framework posits that students adopt either **performance goals** and/or **mastery goals** in their approach to learning. Performance goal orientations emphasize demonstrating competence relative to others, focusing on grades, comparison, and external validation. While this mindset can offer short-term motivation, it often undermines deep learning and discourages students from taking intellectual risks. In contrast, mastery goal orientations prioritize the development of competence and a genuine pursuit of understanding. Students with this mindset tend to embrace challenges as opportunities for growth, leading to more sustained and meaningful learning. This paper proposes that similar patterns may emerge in how students integrate generative AI into their learning, depending on their underlying goal orientation.
