updating ethics paper notes

--- a/notes/2025-07-08-schwarz2025-genAI.qmd
+++ b/notes/2025-07-08-schwarz2025-genAI.qmd
@@ -4,7 +4,7 @@ author: Emily Somerset
 date: 2025-07-08
 categories: ["generative AI"]
 tags: [none]
-image: "https://www.thenewatlantis.com/wp-content/uploads/2015/08/ex-machina-1.jpg"
+image: "https://londongraphicnovelnetwork.com/wp-content/uploads/2022/06/kneel.jpg?w=1024"
 ---
 
 ## Source
