--- a/notes/horton2022-embeddedethics-CS.qmd
+++ b/notes/horton2022-embeddedethics-CS.qmd
@@ -22,19 +22,33 @@ image: "https://64.media.tumblr.com/fe806f423896e049bdd3d3122ad743c5/d6014128e26
       - G4: to generate enthusiasm for learning more about ethics in tech
   2) Do undergraduate students who participate in Embedded Ethics modules have increased interest in and self-efficacy towards ethical issues in technology?
 - **Methods:** 
+  - **Cases:** Delivered two embedded ethics modules (weeks 8 and 12) in a CS2 course intended for computer science majors.
+  - **Controls:** Students in a difference CS2 did not receive embedded ethics modules
+  - **Embedded modules design:**
+    - Topic chose was COVID-19 Contact tracing as it raises the ethical concern related to trade-offs between privacy and protecting public health, while relating to course content (e.g. algorithms)
+    - To realize G2, students were asked to advocate for the viewpoint of an assigned stakeholder (e.g. health professionals, individuals whom privacy was paramount)
+    <!-- - Example: Isaac is a grocery store worker with a chronic illness and is worried he will be assigned fewer shifts if his employer finds out he is of high risk of contracting COVID-19.  -->
+    - Flipped class design with a low-stakes writing activity worth 1% towards their course grade.
+  - **Data:** Students completed surveys at the start and end of the study. Each survey included six questions measuring their interest in and confidence with ethical issues in technology. These questions were combined into a single scale (maximum score: 42), with higher scores reflecting greater interest and self-efficacy in dealing with ethical issues. The initial survey also collected demographic information. For students in the treatment group, the post-survey included additional questions about the learning modules. These were combined into a pedagogical scale (maximum score: 25), with higher scores reflecting greater success in meeting pedagogical goals (G1–G4).
+  
 - **Results:**
+  - **Sample:** A total of 842 students participated (consented), with 217 in the treatment group and 624 in the control group.
+    - The control group included a higher proportion of women (38%) compared to the treatment group (24%), p < 0.001.
+    - A greater percentage of first-generation post-secondary students were in the control group (15%) than in the treatment group (6%), p < 0.001.
+  - **Instrument's internal consistency:** TThe ethics scale showed strong internal consistency at both time points, with Cronbach’s alpha of 0.86 on the pre-test and 0.90 on the post-test. The pedagogical scale also demonstrated strong reliability, with a Cronbach’s alpha of 0.81.
+  - **Initial ethics survey:** There was no significant difference in the mean baseline ethics survey scores between the treatment group (M = 28.14, SD = 6.08) and the control group (M = 27.87, SD = 6.89), p = 0.53.
+  - **Post ethics survey:** There was a significant difference in the mean interest and self-efficacy towards ethics scores between the treatment group (M = 32.39, SD = 5.87) and the control group (M = 28.21, SD = 7.15), p < 0.001. 
+  - **Pedagogical survey:** Mean scores were high (M = 20.20) and the distribution of scores were left-skewed. Each pedagogical goal was examined individually, with results indicating that all goals were achieved.
 - **Conclusions:**
+  - Modules were associated with increased students' mean level of interest in ethical issues and self-efficacy in dealing with ethical issues. 
+  - A limitation of the study is that students were not randomly assigned to treatment and control groups, and demographic differences existed between the groups.
+  - Another limitation is the reliance on self-reported data.
+  - Future work could explore a broader range of ethics topics and assess students’ ability to identify ethical issues in specific scenarios. 
 
 ## Key Quotes
+> "Our efforts are informed by a set of guiding principles: 1) Don't proselytize. Teach students *how, not what to think* 2) Encourage ethics-informed design choices as a design principle 3) Make discussions safe - not personal
 
+> "Technology is shaping our future. Let's educate our students to incorporate ethical considerations in the design of that future."
 
-## Reflection {.callout-reflection}
-
-
-
-## Related Ideas/citations
-
-| Topic                                 | Source                                                                                          |
-|---------------------------------------|-------------------------------------------------------------------------------------------------|
 
 
