partial notes on statistics curriculum paper

--- a/notes/pallant2025-genAI-impact.qmd
+++ b/notes/pallant2025-genAI-impact.qmd
@@ -58,9 +58,9 @@ image: "https://cdn.mos.cms.futurecdn.net/GSkcxRqtHam58T5URwTN7c.jpg"
 
 
 ## Reflection {.callout-reflection}
- - It is unclear what makes this study a quasi-experiment, as it is not evident what the treatment or control groups would have been in a true experimental design.
- - Using grades as a measure of learning in a research setting has limitations. It would strengthen the study if the authors incorporated established assessment instruments or published questions and rubrics that are specifically designed to evaluate learning outcomes.
- - Assignment grades are likely based on how well students critically evaluated differences between their own definition and the AI-generated one (the rubric was not provided). Given this, it’s unsurprising that students classified as having a mastery goal orientation received higher marks. The students are grouped into goal orientation categories based on their written responses and those same responses are also used to determine their grades. It's unclear whether students with a certain goal orientation tend to perform better, or whether their higher performance simply led to them being placed in that category. This makes it hard to draw any clear cause-and-effect conclusions. Therefore, based on my understanding, this study design is not able to assess the impact of GenAI on learning outcomes (study objective 2). 
+ - It would be helpful to clarify what qualifies this study as a quasi-experiment, as the distinction between treatment and control conditions, typical of experimental designs, is not immediately apparent.
+ - While using grades as a proxy for learning is common in educational research, it does come with limitations. The study could be strengthened by incorporating established assessment instruments or published tasks and rubrics specifically designed to evaluate learning outcomes.
+ - It appears that assignment grades were likely influenced by how well students critically compared their own definitions with the AI-generated version, though the rubric was not included. In this context, it’s perhaps not surprising that students identified as having a mastery goal orientation received higher grades. However, because goal orientation was inferred from the same written responses that were used for grading, it becomes difficult to disentangle whether students performed better because of their goal orientation or whether higher-performing students were more likely to be categorized that way. As such, the study design may not be well positioned to isolate the impact of generative AI on learning outcomes (Objective 2), as currently framed.
 
 ## Relevant Background
   - **Achievement Goals Framework**  is a well-established theory in education research, often used to study academic behaviours such as cheating and to explain how positive learning outcomes are achieved. The framework posits that students adopt either **performance goals** and/or **mastery goals** in their approach to learning. Performance goal orientations emphasize demonstrating competence relative to others, focusing on grades, comparison, and external validation. While this mindset can offer short-term motivation, it often undermines deep learning and discourages students from taking intellectual risks. In contrast, mastery goal orientations prioritize the development of competence and a genuine pursuit of understanding. Students with this mindset tend to embrace challenges as opportunities for growth, leading to more sustained and meaningful learning. This paper proposes that similar patterns may emerge in how students integrate generative AI into their learning, depending on their underlying goal orientation.
