--- a/notes/schwarz2025-genAI.qmd
+++ b/notes/schwarz2025-genAI.qmd
@@ -41,9 +41,9 @@ image: "https://londongraphicnovelnetwork.com/wp-content/uploads/2022/06/kneel.j
 
 ## Reflection {.callout-reflection}
 
-- It is surprising that ChatGPT is inconsistent in completing routine analyses. The stability checks show it can assess application requirements, yet it does not do so consistently across iterations.  This is a limitation for users with little knowledge of statistics, as they would not be able to recognize the limitations of the results.
-- The suggestion that "teachers can incorporate exercises that encourage students to code more efficiently and accurately with the assistance of AI" is interesting. I would like to see concrete examples of how this can be implemented.
-- The authors note as a limitation that prompts were designed assuming users had no statistical knowledge. However, they acknowledge that it’s unclear whether this reflects how real users actually interact with AI. Additionally, since these examples were artificially generated, it remains to be studied how students or analysts genuinely use ChatGPT and what their final analysis outcomes look like.
+- It’s interesting to note that ChatGPT was inconsistent in completing routine analyses. While the stability checks demonstrate that it *can* assess application requirements, this ability was not consistently observed across iterations. This raises challenges for users with limited statistical background, as they may not be equipped to recognize potential issues in the output.
+- The suggestion that "teachers can incorporate exercises that encourage students to code more efficiently and accurately with the assistance of AI" is compelling. It would be valuable to see concrete examples or sample activities that illustrate how this idea could be implemented in practice.
+- The authors acknowledge as a limitation that the prompts were designed under the assumption that users have no statistical knowledge, while also noting that it’s unclear whether this reflects real-world usage. Since the examples were artificially constructed, future work could usefully explore how students or analysts actually engage with ChatGPT and what their completed analyses look like in authentic settings.
 
 ## Related Ideas/citations
 
